src/main/java/example/mcroservice/users/errors/my_exceptions/Sing_up_exception.java
package example.mcroservice.users.errors.my_exceptions;


public class Sing_up_exception extends My_exceptions {
  //CONSTRUCTOR
  public Sing_up_exception(String msg) {
    super(msg, "SingUpException");
  }
  
}
